# rqvd

./: .gitignore  Cargo.toml  README.md  build.rs
src/: column.rs  error.rs  lib.rs  qvd_structure.rs  reader.rs  types.rs
tests/: big_file.qvd  floats.qvd  ints.qvd  test_file.qvd
